option('m4',
  type : 'feature',
  value : 'auto',
  description : 'Generate dockerfiles from m4 templates',
)

option('encoder',
  type : 'feature',
  value : 'enabled',
  description : 'Build encoder service ingredients',
)

option('streamer',
  type : 'feature',
  value : 'enabled',
  description : 'Build streamer service ingredients',
)

option('prebuilt-path',
  type : 'string',
  value : '',
  description : 'Path to prebuilt binaries')
